# shooter

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  main.cpp
src/: camera.cpp  camera.h  main.cpp  player.cpp  player.h
